@@ -105,7 +105,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-hello-world-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-hello-world-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources
                 .resolve("valid-bal-file")
@@ -133,7 +133,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-foo-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-foo-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("foo.jar")));
         long executableSize = Files.size(this.testResources.resolve("valid-bal-file").resolve("foo.jar"));
@@ -145,7 +145,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-bar-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-bar-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("bar.jar")));
         Assert.assertEquals(Files.size(this.testResources.resolve("valid-bal-file").resolve("bar.jar")),
@@ -164,7 +164,7 @@ public class BuildCommandTest extends BaseCommandTest {
         String helloWorldJarLog = getOutput("build-bal-with-absolute-jar-path.txt")
                 .replace("<ABSOLUTE_JAR_PATH>",
                          helloExecutableTmpDir.toAbsolutePath().resolve("hello_world.jar").toString());
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), helloWorldJarLog);
+        Assert.assertEquals(buildLog.replace("\r", ""), helloWorldJarLog);
 
         Assert.assertTrue(Files.exists(helloExecutableTmpDir.toAbsolutePath().resolve("hello_world.jar")));
 
@@ -180,7 +180,7 @@ public class BuildCommandTest extends BaseCommandTest {
         String hippoJarLog = getOutput("build-bal-with-absolute-jar-path.txt")
                 .replace("<ABSOLUTE_JAR_PATH>",
                          helloExecutableTmpDir.toAbsolutePath().resolve("hippo.jar").toString());
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), hippoJarLog);
+        Assert.assertEquals(buildLog.replace("\r", ""), hippoJarLog);
 
         Assert.assertTrue(Files.exists(helloExecutableTmpDir.toAbsolutePath().resolve("hippo.jar")));
         ProjectUtils.deleteDirectory(helloExecutableTmpDir);
@@ -194,7 +194,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "")
+        Assert.assertTrue(buildLog.replace("\r", "")
                 .contains("Invalid Ballerina source file(.bal): " + nonBalFilePath));
     }
 
@@ -207,7 +207,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs(validBalFilePath.toString());
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "")
+        Assert.assertTrue(buildLog.replace("\r", "")
                 .contains("The file does not exist: " + validBalFilePath));
     }
 
@@ -237,7 +237,7 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-syntax-err-bal.txt"));
+            Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-syntax-err-bal.txt"));
             Assert.assertTrue(e.getDetailedMessages().get(0).contains("compilation contains errors"));
         }
     }
@@ -253,7 +253,7 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-syntax-err-package.txt"));
+            Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-syntax-err-package.txt"));
             Assert.assertTrue(e.getDetailedMessages().get(0).contains("compilation contains errors"));
         }
     }
@@ -268,7 +268,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                             getOutput("build-bal-project.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
@@ -312,7 +312,7 @@ public class BuildCommandTest extends BaseCommandTest {
 
     /**
      * Test jar conflicts of platform libs.
-     *
+     * <pre>
      * one-1.0.0.jar
      * .
      * ├── META-INF
@@ -349,6 +349,7 @@ public class BuildCommandTest extends BaseCommandTest {
      *         ├── Sample2.class ---> conflicted class file
      *         ├── Sample3.class ---> conflicted class file
      *         └── Sample4.class ---> conflicted class file
+     * </pre>
      */
     @Test(description = "Build a ballerina project with conflicted jars")
     public void testBuildBalProjectWithJarConflicts() throws IOException {
@@ -359,7 +360,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                             getOutput("build-bal-project-with-jar-conflicts.txt"));
 
         Assert.assertTrue(
@@ -393,7 +394,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("project-with-provided-warning.txt"));
     }
 
@@ -406,7 +407,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-bal-project.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
@@ -423,7 +424,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs(projectPath.toString());
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-bal-project.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-bal-project.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -440,7 +441,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-bal-project-with-tests.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-bal-project-with-tests.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -459,8 +460,8 @@ public class BuildCommandTest extends BaseCommandTest {
         String buildLog = readOutput(true);
         String actualOutput1 = getOutput("build-multi-module-project-winery.txt");
         String actualOutput2 = getOutput("build-multi-module-project-winery-storage.txt");
-        Assert.assertTrue(buildLog.replaceAll("\r", "").equals(actualOutput1)
-                || buildLog.replaceAll("\r", "").equals(actualOutput2));
+        Assert.assertTrue(buildLog.replace("\r", "").equals(actualOutput1)
+                || buildLog.replace("\r", "").equals(actualOutput2));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -481,7 +482,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-project-default-build-options.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-project-default-build-options.txt"));
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -509,7 +510,7 @@ public class BuildCommandTest extends BaseCommandTest {
         String expectedLog = getOutput("build-bal-project-override-build-options.txt")
                 .replace("<TEST_RESULTS_JSON_PATH>",
                          projectPath.resolve("target").resolve("report").resolve("test_results.json").toString());
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), expectedLog);
+        Assert.assertEquals(buildLog.replace("\r", ""), expectedLog);
 
         Assert.assertTrue(projectPath.resolve("target").resolve("bin").resolve("winery.jar").toFile().exists());
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -537,7 +538,7 @@ public class BuildCommandTest extends BaseCommandTest {
             Assert.fail(e.getDetailedMessages().get(0));
         }
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-hello-world-bal.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-hello-world-bal.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources
                 .resolve("valid-bal-file")
@@ -562,7 +563,7 @@ public class BuildCommandTest extends BaseCommandTest {
             Assert.fail(e.getDetailedMessages().get(0));
         }
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-hello-world-bal-with-build-options.txt"));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("hello_world.jar")));
@@ -617,7 +618,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-project-with-empty-ballerina-toml.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-project-with-empty-ballerina-toml.txt"));
 
         Assert.assertTrue(
                 projectPath.resolve("target").resolve("bin").resolve("validProjectWithEmptyBallerinaToml.jar").toFile()
@@ -656,7 +657,8 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         }
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-empty-project-with-build-tools.txt"));
+        Assert.assertEquals(buildLog.replace("\r", "").replace("\\", "/"),
+                getOutput("build-empty-project-with-build-tools.txt"));
     }
 
     @Test(description = "Build an empty package with tests only")
@@ -669,7 +671,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-empty-project-with-tests-only.txt"));
     }
 
@@ -683,7 +685,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-empty-project-with-nondefault-modules.txt"));
     }
 
@@ -697,7 +699,7 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
 
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput("build-empty-project-with-nondefault-modules-tests-only.txt"));
     }
 
@@ -751,7 +753,7 @@ public class BuildCommandTest extends BaseCommandTest {
             new CommandLine(buildCommand).parseArgs();
             buildCommand.execute();
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-conflicted-jars-project.txt"));
+            Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-conflicted-jars-project.txt"));
         }
     }
 
@@ -764,8 +766,8 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "").contains(getOutput("dump-build-time-package.txt")));
-        validateBuildTimeInfo(buildLog.replaceAll("\r", ""));
+        Assert.assertTrue(buildLog.replace("\r", "").contains(getOutput("dump-build-time-package.txt")));
+        validateBuildTimeInfo(buildLog.replace("\r", ""));
 
         Assert.assertTrue(Files.exists(projectPath.resolve("target").resolve("build-time.json")));
         Assert.assertTrue(projectPath.resolve("target").resolve("build-time.json").toFile().length() > 0);
@@ -781,8 +783,8 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
 
         String buildLog = readOutput(true);
-        Assert.assertTrue(buildLog.replaceAll("\r", "").contains(getOutput("dump-build-time-standalone.txt")));
-        validateBuildTimeInfo(buildLog.replaceAll("\r", ""));
+        Assert.assertTrue(buildLog.replace("\r", "").contains(getOutput("dump-build-time-standalone.txt")));
+        validateBuildTimeInfo(buildLog.replace("\r", ""));
 
         Assert.assertTrue(Files.exists(this.testResources.resolve("valid-bal-file").resolve("build-time.json")));
         Assert.assertTrue(
@@ -870,7 +872,7 @@ public class BuildCommandTest extends BaseCommandTest {
         BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
         new CommandLine(buildCommand).parseArgs("--dump-graph");
         buildCommand.execute();
-        String buildLog = readOutput(true).replaceAll("\r", "").strip();
+        String buildLog = readOutput(true).replace("\r", "").strip();
 
         Assert.assertEquals(buildLog, getOutput("build-project-with-dump-graph.txt"));
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -894,7 +896,7 @@ public class BuildCommandTest extends BaseCommandTest {
         BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
         new CommandLine(buildCommand).parseArgs("--dump-raw-graphs");
         buildCommand.execute();
-        String buildLog = readOutput(true).replaceAll("\r", "").strip();
+        String buildLog = readOutput(true).replace("\r", "").strip();
 
         Assert.assertEquals(buildLog, getOutput("build-project-with-dump-raw-graphs.txt"));
         Assert.assertTrue(projectPath.resolve("target").resolve("cache").resolve("foo")
@@ -902,6 +904,31 @@ public class BuildCommandTest extends BaseCommandTest {
                 .resolve("foo-package_a-0.1.0.jar").toFile().exists());
 
         ProjectUtils.deleteDirectory(projectPath.resolve("target"));
+    }
+
+    @Test(description = "Build a package with corrupted Dependencies.toml file")
+    public void testBuildWithCorruptedDependenciesToml() throws IOException {
+        Path projectPath = this.testResources.resolve("corrupted-dependecies-toml-file");
+        cleanTarget(projectPath);
+        System.setProperty(USER_DIR_PROPERTY, projectPath.toString());
+        Path sourcePath = projectPath.resolve("Dependencies-corrupt.toml");
+        Path destinationPath = projectPath.resolve("Dependencies.toml");
+        Files.copy(sourcePath, destinationPath);
+        BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
+        new CommandLine(buildCommand);
+        buildCommand.execute();
+        String buildLog = readOutput(true);
+        Assert.assertEquals(
+                buildLog.replaceAll("\r", ""),
+                getOutput("corrupted-dependencies-toml.txt").replaceAll("\r", ""));
+        String depContent = Files.readString(projectPath.resolve("Dependencies.toml"), Charset.defaultCharset())
+                .replace("/r" , "");
+        String ballerinaShortVersion = RepoUtils.getBallerinaShortVersion();
+        String corrcetDepContent = Files.readString(projectPath.resolve("Dependencies-corrected.toml"),
+                        Charset.defaultCharset()).replace("/r" , "")
+                        .replace("DIST_VERSION", ballerinaShortVersion);
+        Assert.assertEquals(depContent, corrcetDepContent);
+        Files.delete(destinationPath);
     }
 
     @Test(description = "Test bir cached project build performance")
@@ -955,7 +982,7 @@ public class BuildCommandTest extends BaseCommandTest {
             Path projectPath = this.testResources.resolve("validProjectWithCustomMavenRepo");
             String content = Files.readString(projectPath.resolve("Ballerina.toml"), Charset.defaultCharset())
                     .replace("{{username}}", username).replace("{{password}}", password);
-            Files.write(projectPath.resolve("Ballerina.toml"), content.getBytes(Charset.defaultCharset()));
+            Files.writeString(projectPath.resolve("Ballerina.toml"), content, Charset.defaultCharset());
             BuildCommand buildCommand = new BuildCommand(projectPath, printStream, printStream, false);
             new CommandLine(buildCommand).parseArgs(projectPath.toString());
             buildCommand.execute();
@@ -995,7 +1022,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-new-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-new-proj-with-dep.txt"));
 
         // Dependencies.toml should have the latest versions of the dependencies
         Path actualDependenciesToml = projectPath.resolve("Dependencies.toml");
@@ -1018,7 +1045,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs("--sticky");
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-new-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-new-proj-with-dep.txt"));
 
         // Dependencies.toml should have the latest versions of the dependencies
         Path actualDependenciesToml = projectPath.resolve("Dependencies.toml");
@@ -1044,10 +1071,10 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-without-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
 
         // Dependencies.toml should be updated to the latest minor versions.
         // depA:1.0.0 -> depA:1.1.0
@@ -1077,10 +1104,10 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-with-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", getOldVersionForOldDistWarning("2201.5.0")));
 
         // Dependencies should stick to the ones already in Dependencies.toml.
         // depA:1.0.0 -> depA:1.0.0
@@ -1110,10 +1137,10 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-without-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
 
         // Dependencies.toml should be updated to the latest minor versions.
         // depA:1.0.0 -> depA:1.1.0
@@ -1144,10 +1171,10 @@ public class BuildCommandTest extends BaseCommandTest {
         buildCommand.execute();
         String buildLog = readOutput(true);
         Assert.assertEquals(
-                buildLog.replaceAll("\r", ""),
+                buildLog.replace("\r", ""),
                 getOutput("build-old-dist-precomp-proj-with-sticky.txt")
-                        .replaceAll("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
-                        .replaceAll("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
+                        .replace("INSERT_NEW_DIST_VERSION_HERE", getNewVersionForOldDistWarning())
+                        .replace("INSERT_OLD_DIST_VERSION_HERE", "4 or an older Update"));
 
         // Dependencies should stick to the ones already in Dependencies.toml.
         // depA:1.0.0 -> depA:1.0.0
@@ -1176,7 +1203,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
 
         // Dependencies.toml should be updated to the latest patch versions.
         // depA:1.0.0 -> depA:1.0.1
@@ -1206,7 +1233,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs("--sticky");
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
+        Assert.assertEquals(buildLog.replace("\r", ""), getOutput("build-curr-dist-precomp-proj-with-dep.txt"));
 
         // Dependencies should stick to the ones already in Dependencies.toml.
         // depA:1.0.0 -> depA:1.0.0
@@ -1261,7 +1288,7 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""),
+            Assert.assertEquals(buildLog.replace("\r", ""),
                 getOutput(outputFile));
             Assert.assertEquals(error, e.getDetailedMessages().get(0));
         }
@@ -1275,7 +1302,7 @@ public class BuildCommandTest extends BaseCommandTest {
         new CommandLine(buildCommand).parseArgs();
         buildCommand.execute();
         String buildLog = readOutput(true);
-        Assert.assertEquals(buildLog.replaceAll("\r", ""),
+        Assert.assertEquals(buildLog.replace("\r", "").replace("\\", "/"),
             getOutput("build-bal-project-with-build-tool.txt"));
     }
 
@@ -1289,7 +1316,7 @@ public class BuildCommandTest extends BaseCommandTest {
             buildCommand.execute();
         } catch (BLauncherException e) {
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""),
+            Assert.assertEquals(buildLog.replace("\r", ""),
                     getOutput("build-bal-project-with-build-tool-not-found.txt"));
             Assert.assertEquals("error: build tool execution contains errors", e.getDetailedMessages().get(0));
         }
@@ -1306,7 +1333,7 @@ public class BuildCommandTest extends BaseCommandTest {
         } catch (BLauncherException e) {
             Assert.assertEquals("error: compilation contains errors", e.getDetailedMessages().get(0));
             String buildLog = readOutput(true);
-            Assert.assertEquals(buildLog.replaceAll("\r", ""),
+            Assert.assertEquals(buildLog.replace("\r", ""),
                     getOutput("build-bal-project-with-invalid-dependency-array.txt"));
         }
     }
@@ -1323,21 +1350,17 @@ public class BuildCommandTest extends BaseCommandTest {
     private String getOldVersionForOldDistWarning(String version) {
         SemanticVersion prevDistributionVersion = SemanticVersion.from(version);
         String prevVersionForDiagnostic;
-        if (null != prevDistributionVersion) {
-            prevVersionForDiagnostic = String.valueOf(prevDistributionVersion.minor());
-            if (prevDistributionVersion.patch() != 0) {
-                prevVersionForDiagnostic += DOT + prevDistributionVersion.patch();
-            }
-        } else {
-            prevVersionForDiagnostic = "4 or an older Update";
+        prevVersionForDiagnostic = String.valueOf(prevDistributionVersion.minor());
+        if (prevDistributionVersion.patch() != 0) {
+            prevVersionForDiagnostic += DOT + prevDistributionVersion.patch();
         }
         return prevVersionForDiagnostic;
     }
 
     static class Copy extends SimpleFileVisitor<Path> {
-        private Path fromPath;
-        private Path toPath;
-        private StandardCopyOption copyOption;
+        private final Path fromPath;
+        private final Path toPath;
+        private final StandardCopyOption copyOption;
 
 
         public Copy(Path fromPath, Path toPath, StandardCopyOption copyOption) {
